--- a/demo/jenkinsfile
+++ b/demo/jenkinsfile
@@ -20,14 +20,16 @@ pipeline {
             }
         }
 
-        stage('Build with Maven') {
-            steps {
-                script {
-                    // Build and install the Maven project
-                    sh 'mvn clean install'
-                }
+    stage('Build with Maven') {
+        steps {
+             script {
+                     sh 'mvn -f path/to/pom.xml clean install'
+                   }
+
+                
             }
         }
+
         
         stage('Build Docker Image') {
             steps {
@@ -67,4 +69,3 @@ pipeline {
         }
     }
 }
-
