--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>SpringDevOps</groupId>
+    <groupId>com.springdevops</groupId> <!-- Typically uses reverse-domain style -->
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>SpringDevopsProject</name>
@@ -43,11 +43,13 @@
     </properties>
 
     <dependencies>
+        <!-- Spring Web Dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- Spring Boot Test Dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -62,8 +64,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <finalName>springdevops-demo</finalName> <!-- This is the name of the JAR file -->
     </build>
 
 </project>
-
