--- a/demo/jenkinsfile
+++ b/demo/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     }
     
     tools {
-        maven 'Maven'  // Maven tool configured in Jenkins
+        maven 'MavenTool'  // Maven tool configured in Jenkins
     }
 
     stages {
