--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -43,6 +43,8 @@
 	</dependencies>
 
 	<build>
+
+	<finalName>SpringDevopsProject</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
